# rust101

./: Cargo.toml  Justfile  Readme.md
.github/actions/rust-action/: action.yml
.github/workflows/: rust-action.yml  rust-bin.yml  rust.yml
.run/: Run guessing_game.run.xml  Run.run.xml  color_traceback.run.xml  fmt.run.xml  http_server.run.xml  poem.run.xml  rocket.run.xml  strings.run.xml  tracing.run.xml  unsafe.run.xml
src/: lib.rs  main.rs
src/tests/: my_async.rs
