[package]
name = "rust101"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.1"
colored = "2.1.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
rocket = { version = "0.5.1", features = ["json"] }
request = { version = "0.0.8" }
lru_time_cache = "0.11.11"


[[bin]]
name = "guessing_game"
path = "src/bin/guess_game.rs"
