[package]
name = "rust101"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.1"
colored = "2.1.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
rocket = { version = "0.5.1", features = ["json"] }
lru_time_cache = "0.11.11"
reqwest = { version = "0.12.7", features = ["json"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
poem = "3.0.4"
tokio = { version = "1.39.3", features = ["full"] }
poem-openapi = { version = "5.0.3", features = ["swagger-ui"] }


[[bin]]
name = "guessing_game"
path = "src/bin/guess_game.rs"
